--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.3
 anyio==3.6.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
@@ -88,6 +89,8 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.13.0
+pyinstaller==5.7.0
+pyinstaller-hooks-contrib==2022.14
 pylev==1.4.0
 pyparsing==3.0.9
 pyrsistent==0.19.1
